--- a/Cocoa/CocoaTouchLayer/UIKit/PageView/ImagePage/YJImagePageViewController.xib
+++ b/Cocoa/CocoaTouchLayer/UIKit/PageView/ImagePage/YJImagePageViewController.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -16,20 +16,32 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="S7Y-Yu-5af">
-                    <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                    <gestureRecognizers/>
-                    <connections>
-                        <outletCollection property="gestureRecognizers" destination="lby-f1-2pC" appends="YES" id="hKT-ms-sFl"/>
-                    </connections>
-                </imageView>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="paS-X9-Dda">
+                    <rect key="frame" x="-1" y="0.0" width="376" height="667"/>
+                    <subviews>
+                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="S7Y-Yu-5af">
+                            <rect key="frame" x="0.0" y="0.0" width="376" height="667"/>
+                            <gestureRecognizers/>
+                            <connections>
+                                <outletCollection property="gestureRecognizers" destination="lby-f1-2pC" appends="YES" id="hKT-ms-sFl"/>
+                            </connections>
+                        </imageView>
+                    </subviews>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <constraints>
+                        <constraint firstAttribute="bottom" secondItem="S7Y-Yu-5af" secondAttribute="bottom" id="9ND-Fa-Nbr"/>
+                        <constraint firstItem="S7Y-Yu-5af" firstAttribute="top" secondItem="paS-X9-Dda" secondAttribute="top" id="FCD-Om-qDf"/>
+                        <constraint firstItem="S7Y-Yu-5af" firstAttribute="leading" secondItem="paS-X9-Dda" secondAttribute="leading" id="O9h-Y2-6fW"/>
+                        <constraint firstAttribute="trailing" secondItem="S7Y-Yu-5af" secondAttribute="trailing" id="U0R-XR-70q"/>
+                    </constraints>
+                </view>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstAttribute="trailing" secondItem="S7Y-Yu-5af" secondAttribute="trailing" id="CNz-fY-AIw"/>
-                <constraint firstItem="S7Y-Yu-5af" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="Qvt-oo-DaT"/>
-                <constraint firstItem="S7Y-Yu-5af" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="g0k-nl-7Wg"/>
-                <constraint firstAttribute="bottom" secondItem="S7Y-Yu-5af" secondAttribute="bottom" id="hpN-5P-chf"/>
+                <constraint firstItem="paS-X9-Dda" firstAttribute="width" secondItem="i5M-Pr-FkT" secondAttribute="width" id="Bm2-EA-cdQ"/>
+                <constraint firstItem="paS-X9-Dda" firstAttribute="height" secondItem="i5M-Pr-FkT" secondAttribute="height" id="SAu-hy-Dgc"/>
+                <constraint firstItem="paS-X9-Dda" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="kK8-U5-HfR"/>
+                <constraint firstItem="paS-X9-Dda" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" id="lWW-Z5-M3o"/>
             </constraints>
             <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
         </view>
