--- a/Developer/CocoaTouchLayer/UIKit/YJTableView/YJTableView/YJTestTableViewCell.xib
+++ b/Developer/CocoaTouchLayer/UIKit/YJTableView/YJTableView/YJTestTableViewCell.xib
@@ -26,6 +26,9 @@
                     </label>
                     <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="zO5-Mc-Fwo">
                         <rect key="frame" x="263" y="12" width="51" height="31"/>
+                        <connections>
+                            <action selector="onClick:" destination="xBI-TB-X7E" eventType="valueChanged" id="88c-xT-Wvg"/>
+                        </connections>
                     </switch>
                 </subviews>
                 <constraints>
