--- a/Developer/CocoaTouchLayer/UIKit/YJCollectionView/YJCollectionView/YJTestCollectionReusableView.xib
+++ b/Developer/CocoaTouchLayer/UIKit/YJCollectionView/YJCollectionView/YJTestCollectionReusableView.xib
@@ -7,7 +7,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionReusableView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="YJTestCollectionReusableView" id="g7K-pS-nw1" customClass="YJTestCollectionReusableView">
+        <collectionReusableView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="" id="g7K-pS-nw1" customClass="YJTestCollectionReusableView">
             <rect key="frame" x="0.0" y="0.0" width="320" height="50"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
