--- a/Developer/CocoaTouchLayer/UIKit/YJTableView/YJTableView/YJTestTableViewCell.xib
+++ b/Developer/CocoaTouchLayer/UIKit/YJTableView/YJTableView/YJTestTableViewCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -40,6 +40,7 @@
             </tableViewCellContentView>
             <connections>
                 <outlet property="label" destination="XFe-Fb-WBz" id="7jK-UX-ddb"/>
+                <outlet property="sSwitch" destination="zO5-Mc-Fwo" id="ve0-5i-6xU"/>
             </connections>
             <point key="canvasLocation" x="427" y="362"/>
         </tableViewCell>
