--- a/Developer/AppFrameworks/UIKit/YJUINavigationRouter/YJUINavigationRouter/Base.lproj/Main.storyboard
+++ b/Developer/AppFrameworks/UIKit/YJUINavigationRouter/YJUINavigationRouter/Base.lproj/Main.storyboard
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="mZs-En-Qt3">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="mZs-En-Qt3">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13174"/>
-        <capability name="Navigation items with more than one left or right bar item" minToolsVersion="7.0"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -25,7 +24,7 @@
                     </view>
                     <navigationItem key="navigationItem" id="Zcg-Nf-6hI">
                         <rightBarButtonItems>
-                            <barButtonItem title="单页跳转" id="Gk1-1x-qdH">
+                            <barButtonItem title="跳转" id="Gk1-1x-qdH" userLabel="跳转">
                                 <connections>
                                     <action selector="onClickOnceJump:" destination="BYZ-38-t0r" id="O20-uA-52s"/>
                                 </connections>
